--- a/src/components/work/App.css
+++ b/src/components/work/App.css
@@ -23,22 +23,6 @@ section {
   overflow: hidden;
 }
 
-.intro,
-.outro {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(255, 115, 49);
-  color: #000;
-}
-
-.intro h1,
-.outro h1 {
-  font-family: "GR NORCH";
-  font-size: 5vw;
-  font-weight: lighter;
-  text-transform: uppercase;
-}
 
 .work {
   background-color: #000;
@@ -52,11 +36,19 @@ canvas {
 }
 
 #grid-canvas {
-  z-index: 0;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  z-index: 1 !important;
+  pointer-events: none !important;
 }
 
 #letters-canvas {
-  z-index: 1;
+  position: fixed !important;
+  top: 0 !important;
+  left: 0 !important;
+  z-index: 2 !important;
+  pointer-events: none !important;
 }
 
 .text-container {
